@@ -11,7 +11,7 @@ t/pod-coverage.t
 t/pod.t
 
 scripts/build.pl
-scripts/installdic.pl
+scripts/installdic.in
 scripts/jspell-dict.in
 
 agrep/agrep.1
